--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,14 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.google.com/specimen/Staatliches?category=Display');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,8 +19,8 @@ Fonts are separated by a | */
   --accent2-color: #8dc3ef;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Bebas Naue";
-  --paragraph-font: Staatliches , Helvetica, sans-serif;
+  --heading-font: "Pacifico";
+  --paragraph-font: "Permanent Marker";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #004777;  /* headlines on a white background */ 
