--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,11 +3,11 @@
 #content{/* background-color: orange; */
 max-width: 1600px;
 margin: 0 auto;
-text-align: center;   
+ 
 }
 
 nav {
-    text-align: right;
+    text-align: left;
 }
 /* top of the page */
 nav a {
@@ -15,9 +15,16 @@ nav a {
     text-decoration: none;
     background-color: purple;
 }
+header {
+    text-align: left;
+}
+.home-grid{
+    text-align: 
+    center;
+}
+.oars {text-align: left;}
 
-.oars {text-align: right;}
-#logo-link {text-align: right;}
+#logo-link {text-align: lift;}
 
 /* #link {text-align: left;} */
 
@@ -29,6 +36,7 @@ nav a:hover {
 }
 header {
     background-color:rgba(106, 204, 35, 0.7);
+    text-align: left;
 }
 /* 
 body {
@@ -40,6 +48,7 @@ main {background-color: lightcoral;}
 
 .book, .join {background-color: rgb(255, 255, 255);}
 
+.msg {text-align: center;}
 
 .icon{
     width: 80px;
@@ -55,6 +64,9 @@ img{max-width: 100%;}
     background-color: rgb(0, 252, 239);
 }
 
+#mountains_photo {
+    text-align: center;
+}
 
 footer {
     text-align: left;
@@ -68,34 +80,5 @@ footer a {
     color: #000000;
     text-decoration: none;
 
-}
-footer a {
-    
-    text-align: right;
-    color: #000000;
-    text-decoration: none;
-
-}
-footer a {
-    
-    text-align: right;
-    color: #000000;
-    text-decoration: none;
-
-}
 
 
-footer a {
-    
-    text-align: right;
-    color: #000000;
-    text-decoration: none;
-
-}
-footer a {
-    
-    text-align: right;
-    color: #000000;
-    text-decoration: none;
-
-}
