--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -175,14 +175,15 @@ grid-template-rows: (3, 1fr);  /* This is the parent of the activity 4 boxes. */
 .content6 {
   display: grid;
   grid-template-columns: (6, 1fr);
-  grid-template-rows: (6, 1fr)
+  grid-template-rows: (6, 1fr);
+  height: 400px;
   /* This is the parent of the activity 6 boxes. */
 }
 .red6 {
   grid-column: 1/5;
   grid-row: 1/3;
   width: 100%; 
-  height: 200px; 
+  height: 100%; 
   background-color: red;
   z-index: 0;
 } 
@@ -190,7 +191,7 @@ grid-template-rows: (3, 1fr);  /* This is the parent of the activity 4 boxes. */
   grid-column: 1/3;
   grid-row: 5/7;
   width: 100%; 
-  height: 200px; 
+  height: 100%; 
   background-color: green; 
   z-index: 2;
 } 
@@ -198,7 +199,7 @@ grid-template-rows: (3, 1fr);  /* This is the parent of the activity 4 boxes. */
   grid-column: 5/7;
   grid-row: 3/7;
   width: 100%; 
-  height: 400px; 
+  height: 100%; 
   background-color: gold;
   z-index: 3;
 } 
@@ -206,7 +207,7 @@ grid-template-rows: (3, 1fr);  /* This is the parent of the activity 4 boxes. */
   grid-column: 2/6;
   grid-row: 2/6;
   width: 100%; 
-  height: 400px; 
+  height: 100%; 
   background-color: blue;
   z-index: 1;
 } 
