--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,7 +24,9 @@ nav a {
     padding: 35px;
 }
 header {
-    text-align: left;
+    
+    display: grid;
+    grid-template-columns: 150px, auto;
 }
 .home-grid{
     text-align: center;
