--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,12 @@ max-width: 1600px;
 margin: 0 auto;
 font-family: Helvetica, Arial, sans-serif;
 }
+
+img{
+    max-width: 100%;
+    object-fit: contain;
+}
+
 h2 {
     margin: 0;
 }
@@ -16,33 +22,67 @@ nav {
     display: flex;
     justify-content: space-around;
 }
-/* top of the page */
+
 nav a {
     color: #fcfcfc;
-    text-decoration: none;
-    
-    padding: 35px;
-}
-.home-grid{
     text-align: center;
+    text-decoration: none;
+    padding: 35px;
+    
+}
+
+.card-img {
+    max-width: 100%;
+    height: auto;
 }
 .oars {text-align: left;}
 
-#logo-link {text-align: left;
-padding-top: 5px;}
-
-#hero-msg {
-    text-align: center;
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+     
+
+#hero-image{
+    width: 100%;
+
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    color: white;
+    text-align: center;
+}
+    
+#hero-msg h4 {
+    color: white;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    /* z-index: -1; */
+}
 nav a:hover {
     background-color: black;
     color: #265fb4;
 }
+
+
 header {
     background-color: #d9c2a3;
     display: grid;
     grid-template-columns: 150px auto;
+    background-color: transparent;
 } 
 
 body {
@@ -51,11 +91,14 @@ body {
     margin: 0;
     padding: 0;
 }
+
 main section img {
     box-sizing: border-box;
 }
 
-.rivers-card, .camping-card, .rapids-card {  margin: 200px 0;}
+.rivers-card, .camping-card, .rapids-card {
+     margin: 200px 0;
+    }
 
 .book, .join {
     background-color: #d9c2a3;
@@ -69,10 +112,14 @@ main section img {
 
 .card-img {
     border: 10px solid #d9c2a3;
+
 }
 
 .msg {text-align: center;
-padding: 35px;}
+padding: 35px;
+grid-row: 6/7;
+grid-column: 6/10;
+}
 .msg p {font-size: .8em;
 padding-bottom: 15px;}
 
@@ -81,35 +128,133 @@ padding-bottom: 15px;}
     padding-top: 10px;
 }
 
+main.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    /* grid-template-rows: auto; */
+}
 
-
-
-img{max-width: 100%;}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 
 #background {
     height: 725px;
     background-color:#d9c2a3;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
+.mountains{
+    grid-row: 5/8;
+    grid-column: 2/7;
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+.msg {
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 15px 15px 15px #6f7364;
+}
+       
+
+
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .4;
+    transform: scale(1.5);
+}
+
 
 #mountains_photo {
     text-align: center;
 }
+.card-img, .mountains {
+    width: 100%;
+}
 
 footer {
-    text-align: left;
+
     background-color: lightblue;
     margin-top: 200px;
+    padding: 25px 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
 }
 
 footer a {
-    
     text-align: right;
     color: #000000;
     text-decoration: none;
     padding: 25px 50px;
 }
 
-footer .social img {padding-top: 15px;
+footer .social img {
+    padding-top: 15px;
+}
 
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
