--- a/rank/styles/style.css
+++ b/rank/styles/style.css
@@ -5,14 +5,20 @@
     z-index: -2;
 }
 
+#logo{width: 60px;
+    margin-top: 2px;
+
+}
 header {
     position: sticky;
     top: 0;
-    padding: 25px;
+    
     background-color: rgb(33, 33, 33);
    
 }
 body {margin: 0;}
+
+.link{margin-top: 20px;}
 
 nav a {
 color: white;
