--- a/rank/styles/site-plan.css
+++ b/rank/styles/site-plan.css
@@ -2,28 +2,30 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #add8e6   ;
+  --secondary-color: #808080 ;
+  --accent1-color: #Aa9a9a9;
+  --accent2-color: #212121;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
+  --heading-font: "Ubuntu";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: black;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: #212121  ;
+  --nav-link-color: white;
+  --nav-background-color: #212121;
+  --nav-hover-link-color: none;
+  --nav-hover-background-color: none;
 }
 
 
@@ -41,7 +43,7 @@ img {
   margin: 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
+  font-family: var("Ubuntu");
   color: var(--headline-color-on-white);
 }
 h2 {
@@ -73,6 +75,7 @@ p {
   margin: 30px auto;
   text-align: center;
 }
+img{width: 200px;}
 .colors th {
   background-color: #999;
 }
